# Dota2-Start

./: .env  .gitignore  .umirc.ts  README.md  i18n.md  ice.config.mts  package.json  pnpm-lock.yaml
.ice/: route-manifest.json  routes.tsx
Dota2 Strat-cache/part1/: output-info.ini
src/: app.tsx  document.tsx  typings.d.ts
src-tauri/: 2  Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/gMod/: index.json  pak01_dir.vpk
src-tauri/locale/: en-US.json  en_US.json  zh-CN.json  zh-HK.json
src-tauri/src/: Local.rs  gsi.rs  lib.rs  main.rs
src-tauri/src/steam/: dota_finder.rs  mod.rs  process_monitor.rs
src/.umi/: appData.json  exports.ts  testBrowser.tsx  tsconfig.json  umi.ts
src/.umi-production/: appData.json  exports.ts  testBrowser.tsx  umi.ts
src/.umi-production/core/: helmet.ts  history.ts  historyIntelli.ts  polyfill.ts
src/.umi/core/: helmet.ts  history.ts  historyIntelli.ts  polyfill.ts  route.tsx
src/hudWindow/: index.ts
src/layouts/: Locale.tsx  Logo.tsx  TitleBar.tsx  cmdinput.tsx  index.tsx  style.less
src/mod/: Tags.tsx  ThemeConfig.ts  TitleChange.ts  V_analysis.ts  bg-video.tsx  dota2_init.ts  locale_load.ts  status.ts  store.ts  update.ts
src/mod/Layout/: Locale.tsx  Logo.tsx  TitleBar.tsx
src/mod/NewsCard/: index.tsx  removeBBCodeTags.ts
src/mod/dota/: Task.ts
src/mod/http/: contributorService.ts  new.ts  video.ts
src/mod/navigation/: index.less  index.tsx  routes.tsx
src/pages/: layout.tsx  protocol.tsx  style.less  windowEvent.ts
src/pages/Hudwindow/: index.tsx  timer.tsx
(+30 files in other folders)
