[package]
name = "Dota2-Strat"
version = "1.1.7"
description = "Dota2 Strat"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "Dota2Strat_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2.5.1", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-http = "2"
dirs = "6.0.0"                                   # 用于跨平台获取主目录
anyhow = "1.0"
winreg = "0.55.0"
sysinfo = "0.34.2"
tauri-plugin-fs = "2"
tokio = { version = "1", features = ["full"] }
warp = "0.3"
tauri-plugin-decorum = { git = "https://github.com/clearlysid/tauri-plugin-decorum.git" }
tauri-plugin-os = "2"
